<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resumeCartMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResumeCart">

    <TextView
        android:id="@+id/resumeCartLabelText"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resumeCartButtonBack"
        style="@style/Widget.Cashback.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/btn_default"
        android:padding="10dp"
        android:text="@string/action_back_products"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resumeCartButtonEmpty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumeCartButtonPayment" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resumeCartButtonEmpty"
        style="@style/Widget.Cashback.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumeCartLabelText"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/resumeCartScrollLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TableRow
...
            android:padding="7dp"
            android:text="@string/label_total_ht"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/resumeCartTableRow1TotalHTNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:ems="10"
            android:enabled="false"
            android:gravity="center_horizontal|center_vertical"
...
            android:padding="7dp"
            android:text="@string/label_total_ttc"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/resumeCartTableRow2TotalTTCNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:ems="10"
            android:enabled="false"
            android:gravity="center_horizontal|center_vertical"
...
