<resources>
    <string name="app_name">Cash Manager</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="text_server">Server ip</string>
    <string name="server_ip">3.231.177.119</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
...
    <string name="label_product">Product</string>
    <string name="label_products">Products</string>
    <string name="label_product_name">Name</string>
    <string name="label_product_price">Price</string>
    <string name="label_product_quantity">Quantity</string>
    <string name="label_product_action">Action</string>
    <string name="action_back_products">Go back to products</string>
    <!-- Strings related to a cart -->
    <string name="label_cart">Cart</string>
    <string name="action_cart_empty">Empty cart</string>
    <string name="action_check_cart">Check cart</string>
    <string name="label_total_ht">Total H.T.</string>
    <string name="label_total_ttc">Total T.T.C.</string>
    <!-- Strings related to payment -->
    <string name="action_payment_proceed">Proceed to payment</string>
    <string name="status_payment_pending">Payment pending</string>
    <string name="status_payment_done">Payment done</string>
    <string name="status_payment_cancelled">Payment cancelled</string>
    <string name="status_payment_error">Error during the payment</string>

    <string-array name="servers_array">
...
