<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productListMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:visibility="visible"
    tools:context=".activities.ProductList"
    tools:visibility="visible">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productListLabelLayout"
        style="@style/Widget.Cashback.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/productListLabelText"
            style="@android:style/Widget.Holo.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/label_products"
            android:textColor="@color/colorSecondary"
            android:textSize="30sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:id="@+id/productListTableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:divider="@drawable/border"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="horizontal"
        android:theme="@style/Theme.Cashback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productListLabelLayout">

        <TableRow
            android:id="@+id/productListTableRowLayout"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productListTableRowNameLabel"
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="4"
                android:width="50dp"
                android:background="@color/colorPrimaryDark"
                android:drawableBottom="@drawable/border"
                android:singleLine="true"
                android:text="@string/label_product"
                android:textColor="@color/textColorSecondary"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/productListTableRowQuantityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/label_product_quantity"
                android:textColor="@color/textColorSecondary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/productListTableRowActionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/label_product_action"
                android:textColor="@color/textColorSecondary"
                android:textSize="24sp" />

        </TableRow>
    </TableLayout>

    <ScrollView
        android:id="@+id/productListScrollLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/productListButtonCheckCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/productListTableLayout"
        app:layout_constraintTop_toBottomOf="@+id/productListTableLayout">

        <LinearLayout
            android:id="@+id/productListScrollLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/productListButtonCheckCart"
        style="@style/Widget.Cashback.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_default"
        android:text="@string/action_check_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productListTableLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>